# cell

./: README.md  cell.cabal
app/: Main.hs
src/: Cell.hs
src/Cell/: Automata.hs  Types.hs  UI.hs  Util.hs
src/Cell/Automata/: Common.hs  Conway.hs  Types.hs
src/Cell/UI/: Attr.hs  Class.hs  Draw.hs  InputHandler.hs  Types.hs
