cabal-version:      2.4
name:               cell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mapa
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Cell, Cell.Types, Cell.UI

    -- Modules included in this library but not exported.
    other-modules: Cell.Automata.Common, Cell.Automata.Conway, Cell.Automata.Types, Cell.Automata, Cell.UI.Types, Cell.UI.Draw, Cell.Util, Cell.UI.InputHandler

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    extensions: MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, TypeApplications, FlexibleContexts, TupleSections, TemplateHaskell
    build-depends:    base ^>=4.16.3.0, array, brick, lens, microlens, data-default, containers, vty, mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable cell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    extensions: MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, TypeApplications
    ghc-options: -threaded
    build-depends:    base ^>=4.16.3.0, cell, array, brick, lens, microlens, data-default, vty
    hs-source-dirs:   app
    default-language: Haskell2010
